Mon Sep 20 21:00:46 PDT 1999	Michael Jennings <mej@eterm.org>

	Fixed a problem with sticky transparent Eterms not updating their
	background image.
	
-------------------------------------------------------------------------------
Mon Sep 20 21:25:46 PDT 1999	Michael Jennings <mej@eterm.org>

	Added support for xterm's property change escape sequence as requested
	by Greg Badros <gjb@cs.washington.edu>, the originator of the
	sequence (and one of the authors of scwm).
	
-------------------------------------------------------------------------------
Tue Sep 21 20:00:50 PDT 1999	Michael Jennings <mej@eterm.org>

	Initial work on font caching.  WARNING:  This code is broken and will
	not compile, but I'm going home anyway.
	
-------------------------------------------------------------------------------
Wed Sep 22 15:52:01 PDT 1999	Michael Jennings <mej@eterm.org>

	The font caching seems to work now, so let me know if you find any
	problems.
	
-------------------------------------------------------------------------------
Thu Sep 23 15:56:35 PDT 1999	Michael Jennings <mej@eterm.org>

	Auto mode lives.  Still a little flaky with the submenu pixmap, but
	everything else seems to work peachily.  It requires an Enlightenment
	themes that contains the needed imageclasses, but that's not hard to
	do.  Here are the classes you need:

	ETERM_BG             Background image
	ETERM_ARROW_UP       Up arrow
	ETERM_ARROW_DOWN     Down arrow
	ETERM_ARROW_LEFT     Left arrow (for future use)
	ETERM_ARROW_RIGHT    Right arrow (for future use)
	ETERM_TROUGH         Scrollbar trough
	ETERM_ANCHOR         Scrollbar anchor
	ETERM_MENU_BOX       Menu background
	ETERM_MENU_ITEM      Menu item
	ETERM_MENU_SUBMENU   Submenu item

	Currently, ETERM_MENU_BOX doesn't work; Eterm uses ETERM_MENU_ITEM
	instead.  This is a design issue I have to fix. :-)  Everything else,
	however, should work as noted above.
	
-------------------------------------------------------------------------------